--- a/insiders/main.html
+++ b/insiders/main.html
@@ -2,13 +2,30 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PyQuick Insiders 介绍</title>
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="static/css/all.css">
     <link rel="stylesheet" href="static/css/intrduce.css">
 </head>
 <body>
-    <h1>PyQuick Insiders 介绍</h1>
     <div class="container">
+        <!-- 页面头部 -->
+        <div class="page-header">
+            <div class="header-icon">
+                <i class="fas fa-rocket"></i>
+            </div>
+            <div class="header-content">
+                <h1 class="page-title">PyQuick Insiders</h1>
+                <p class="page-subtitle">抢先体验最新功能，参与产品开发</p>
+                <div class="version-badge">
+                    <span class="badge insider">Insider</span>
+                    <span class="badge version">预览版</span>
+                </div>
+            </div>
+        </div>
+        
         <section class="intro-section">
             <h2>PyQuick Insiders 通道</h2>
             <p>PyQuick Insiders 提供了不同的通道，供用户提前体验最新功能和改进。以下是当前可用的通道：</p>
