--- a/issue/index.html
+++ b/issue/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>问题反馈与讨论</title>
+    <title>PyQuick 问题反馈</title>
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./static/css/issue.css">
 </head>
 <body>
     <div class="container">
-        <h1>问题反馈与讨论</h1>
+        <!-- 页面头部 -->
+        <div class="page-header">
+            <div class="header-icon">
+                <i class="fas fa-comments"></i>
+            </div>
+            <div class="header-content">
+                <h1 class="page-title">PyQuick 问题反馈</h1>
+                <p class="page-subtitle">欢迎反馈问题、提出建议，共同改进 PyQuick</p>
+                <div class="version-badge">
+                    <span class="badge feedback">问题反馈</span>
+                    <span class="badge community">社区讨论</span>
+                </div>
+            </div>
+        </div>
+        
         <p>欢迎来到我们的问题反馈和讨论页面！请在下方留言，分享您的宝贵意见。</p>
 
         <div class="category-selector">
@@ -41,4 +57,4 @@
     </div>
     <script src="./static/js/issue.js"></script>
 </body>
-</html> 
+</html>
