--- a/pyquick/main.html
+++ b/pyquick/main.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PyQuick 项目介绍</title>
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
-    <header class="header">
-        <h1>PyQuick 项目介绍</h1>
-        <img src="./favicon.ico" alt="PyQuick Logo" class="logo">
-        <p class="subtitle">一个为Python开发者量身打造的macOS/Windows效率工具箱</p>
-    </header>
+    <div class="container">
+        <!-- 页面头部 -->
+        <div class="page-header">
+            <div class="header-icon">
+                <i class="fas fa-bolt"></i>
+            </div>
+            <div class="header-content">
+                <h1 class="page-title">PyQuick</h1>
+                <p class="page-subtitle">一个为Python开发者量身打造的macOS/Windows效率工具箱</p>
+                <div class="version-badge">
+                    <span class="badge project">项目介绍</span>
+                    <span class="badge version">v2.0</span>
+                </div>
+            </div>
+        </div>
 
     <main class="container">
         <section class="section">
