some non-necessary fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
 <div class="container">
     <!-- 主标题 -->
-    <h1 class="main-title">Hi, I'm Code Jumping<br><span>(Haoyang Li)</span></h1>
+    <h1 class="main-title">Hi, I'm Ghltbm<br/>(Haoyang Li)</h1>
 
     <!-- 功能卡片容器 -->
     <div class="grid-container">
