--- a/oclpr/index.html
+++ b/oclpr/index.html
@@ -33,7 +33,7 @@
 
 </section>
 <footer class="footer">
-  <p>项目地址:<a href="https://github.com/pyquick/oclp-r" target="_blank">OCLP-R</a></p>
+  <p>项目地址:<a href="https://github.com/hackdoc/oclp-r" target="_blank">OCLP-R</a></p>
   <!--<p>文档中心(for developers):<a href="/developers" target="_blank">developers</a></p>-->
 </footer>
 <script src="static/js/main.js"></script>
